--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@types/jquery": "^3.5.5",
     "bootstrap": "^5.0.2",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
     "pnotify": "^5.2.0"
   },
