--- a/core/composer.json
+++ b/core/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "nilportugues/sql-query-builder": "^1.8",
-        "smarty/smarty": "~3.1"
+        "smarty/smarty": "~3.1",
+        "greenlion/php-sql-parser": "^4.4"
     }
 }
