--- a/core/composer.json
+++ b/core/composer.json
@@ -2,6 +2,7 @@
     "require": {
         "nilportugues/sql-query-builder": "^1.8",
         "smarty/smarty": "~3.1",
-        "greenlion/php-sql-parser": "^4.4"
+        "greenlion/php-sql-parser": "^4.4",
+        "phpmailer/phpmailer": "^6.5"
     }
 }
