--- a/core/composer.json
+++ b/core/composer.json
@@ -4,6 +4,9 @@
 	"smarty/smarty"                 :"~3.1",
 	"greenlion/php-sql-parser"      :"^4.4",
 	"phpmailer/phpmailer"           :"^6.5",
-    "bramus/router": "~1.6"
+    "bramus/router": "~1.6",
+    "gettext/gettext": "^5.6",
+    "gettext/js-scanner": "^1.1",
+    "gettext/php-scanner": "^1.3"
   }
 }
