--- a/core/composer.json
+++ b/core/composer.json
@@ -7,6 +7,7 @@
     "bramus/router": "~1.6",
     "gettext/gettext": "^5.6",
     "gettext/js-scanner": "^1.1",
-    "gettext/php-scanner": "^1.3"
+    "gettext/php-scanner": "^1.3",
+    "smarty-gettext/smarty-gettext": "^1.6"
   }
 }
