--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ config.json
 .idea
 .vscode
 /node_modules/
+test.php
+debug.php
 package-lock.json
 # Commit your application's lock file https://getcomposer.org/doc/01-basic-usage.md#commit-your-composer-lock-file-to-version-control
 # You may choose to ignore a library lock file http://getcomposer.org/doc/02-libraries.md#lock-file
