--- a/core/composer.json
+++ b/core/composer.json
@@ -1,13 +1,12 @@
 {
   "require":{
-	"nilportugues/sql-query-builder":"^1.8",
-	"smarty/smarty"                 :"~3.1",
-	"greenlion/php-sql-parser"      :"^4.4",
-	"phpmailer/phpmailer"           :"^6.5",
-    "bramus/router": "~1.6",
-    "gettext/gettext": "^5.6",
-    "gettext/js-scanner": "^1.1",
-    "gettext/php-scanner": "^1.3",
-    "smarty-gettext/smarty-gettext": "^1.6"
+	  "nilportugues/sql-query-builder":"^1.8",
+	  "smarty/smarty"                 :"~3.1",
+	  "greenlion/php-sql-parser"      :"^4.4",
+	  "phpmailer/phpmailer"           :"^6.5",
+	  "bramus/router"                 :"~1.6",
+	  "gettext/gettext"               :"^5.6",
+	  "gettext/js-scanner"            :"^1.1",
+	  "gettext/php-scanner"           :"^1.3"
   }
 }
