--- a/core/composer.json
+++ b/core/composer.json
@@ -7,6 +7,8 @@
 	  "bramus/router"                 :"~1.6",
 	  "gettext/gettext"               :"^5.6",
 	  "gettext/js-scanner"            :"^1.1",
-	  "gettext/php-scanner"           :"^1.3"
+	  "gettext/php-scanner"           :"^1.3",
+	  "gettext/json"                  :"^1.0",
+	  "gettext/translator"            :"^1.0"
   }
 }
