--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,5 @@
 {
+	"version"    :"3.0",
 	"authors"    :[
 		{
 			"name" :"Kirill",
@@ -15,7 +16,8 @@
 		"gettext/js-scanner"            :"^1.1",
 		"gettext/php-scanner"           :"^1.3",
 		"gettext/json"                  :"^1.0",
-		"gettext/translator"            :"^1.0"
+		"gettext/translator"            :"^1.0",
+		"splitbrain/php-cli"            :"^1.1"
 	},
 	"require-dev":{
 		"roave/security-advisories":"dev-latest"
