--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
 		"traineratwot/php-cli"          :"^1.1.5"
 	},
 	"require-dev":{
-		"roave/security-advisories":"dev-latest"
+		"roave/security-advisories":"dev-latest",
+		"jetbrains/phpstorm-attributes": "^1.0"
 	},
 	"autoload"   :{
 		"files":[
