--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,10 @@
 			"email":"41589091+Traineratwot@users.noreply.github.com"
 		}
 	],
+	"type"       :"project",
+	"scripts"    :{
+		"wt": "php core/model/cli/wt.php"
+	},
 	"require"    :{
 		"nilportugues/sql-query-builder":"^1.8",
 		"smarty/smarty"                 :"~3.1",
@@ -20,8 +24,8 @@
 		"traineratwot/php-cli"          :"^1.1.5"
 	},
 	"require-dev":{
-		"roave/security-advisories":"dev-latest",
-		"jetbrains/phpstorm-attributes": "^1.0"
+		"roave/security-advisories"    :"dev-latest",
+		"jetbrains/phpstorm-attributes":"^1.0"
 	},
 	"autoload"   :{
 		"files":[
