--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
 	"authors"    :[
 		{
 			"name" :"Kirill",
-			"email":"41589091+Traineratwot@users.noreply.github.com"
+			"email":"Traineratwot@yandex.ru"
 		}
 	],
 	"license"    :"GPL-3.0-or-later",
