--- a/.github/workflows/GitLab.yml
+++ b/.github/workflows/GitLab.yml
@@ -14,6 +14,6 @@ jobs:
       env:
         GITLAB_HOSTNAME: "gitlab.traineratwot.site"
         GITLAB_USERNAME: "traineratwot"
-        GITLAB_PASSWORD: ${{ secrets.GITLAB_PASSWORD }} // Generate here: https://gitlab.com/profile/personal_access_tokens
-        GITLAB_PROJECT_ID: "2" // https://gitlab.com/<namespace>/<repository>/edit
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} // https://docs.github.com/en/actions/reference/authentication-in-a-workflow#about-the-github_token-secret
+        GITLAB_PASSWORD: ${{secrets.GITLAB_PASSWORD}}
+        GITLAB_PROJECT_ID: "2"
+        GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
