--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
 	"name"       :"traineratwot/web-tool-template",
-	"version"    :"3.0.1",
+	"version"    :"4.0.0",
 	"authors"    :[
 		{
 			"name" :"Kirill",
@@ -10,12 +10,10 @@
 	"license"    :"GPL-3.0-or-later",
 	"type"       :"project",
 	"scripts"    :{
-		"up:release":"gh release create \"3.0.2\" --generate-notes"
+		"up:release":"gh release create \"4.0.0\" --generate-notes"
 	},
 	"require"    :{
-		"nilportugues/sql-query-builder":"^1.8",
 		"smarty/smarty"                 :"~3.1",
-		"greenlion/php-sql-parser"      :"^4.4",
 		"phpmailer/phpmailer"           :"^6.5",
 		"bramus/router"                 :"~1.6",
 		"gettext/gettext"               :"^5.6",
@@ -23,7 +21,8 @@
 		"gettext/php-scanner"           :"^1.3",
 		"gettext/json"                  :"^1.0",
 		"gettext/translator"            :"^1.0",
-		"traineratwot/php-cli"          :"^1.1.5"
+		"traineratwot/php-cli"          :"^1.1.5",
+		"traineratwot/pdo-extended": "dev-master"
 	},
 	"require-dev":{
 		"roave/security-advisories"    :"dev-latest",
@@ -31,7 +30,6 @@
 	},
 	"autoload"   :{
 		"files":[
-			"core/model/main/PDOExtended.php",
 			"core/model/main/Core.php",
 			"core/model/main/Err.php",
 			"core/model/main/Cache.php"
