--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
+	"$schema": "https://raw.githubusercontent.com/Traineratwot/composer-config/master/composer-config-schema.json",
 	"name"       :"traineratwot/web-tool-template",
-	"version"    :"4.0.0",
+	"version"    :"4.0.1",
 	"authors"    :[
 		{
 			"name" :"Kirill",
@@ -10,19 +11,22 @@
 	"license"    :"GPL-3.0-or-later",
 	"type"       :"project",
 	"scripts"    :{
-		"up:release":"gh release create \"4.0.0\" --generate-notes"
+		"up:release"     :"gh release create \"4.0.1\" --generate-notes",
+		"composer-config":"composer getAllConfigs"
 	},
 	"require"    :{
-		"smarty/smarty"                 :"~3.1",
-		"phpmailer/phpmailer"           :"^6.5",
-		"bramus/router"                 :"~1.6",
-		"gettext/gettext"               :"^5.6",
-		"gettext/js-scanner"            :"^1.1",
-		"gettext/php-scanner"           :"^1.3",
-		"gettext/json"                  :"^1.0",
-		"gettext/translator"            :"^1.0",
-		"traineratwot/php-cli"          :"^1.1.5",
-		"traineratwot/pdo-extended": "dev-master"
+		"smarty/smarty"               :"~3.1",
+		"phpmailer/phpmailer"         :"^6.5",
+		"bramus/router"               :"~1.6",
+		"gettext/gettext"             :"^5.6",
+		"gettext/js-scanner"          :"^1.1",
+		"gettext/php-scanner"         :"^1.3",
+		"gettext/json"                :"^1.0",
+		"gettext/translator"          :"^1.0",
+		"traineratwot/php-cli"        :"^1.1.5",
+		"traineratwot/pdo-extended"   :"^1.0",
+		"traineratwot/composer-config":"^1.0",
+		"traineratwot/cache"          :"^2.0"
 	},
 	"require-dev":{
 		"roave/security-advisories"    :"dev-latest",
@@ -41,6 +45,16 @@
 			"model\\"  :"core/model/",
 			"page\\"   :"core/views/",
 			"ajax\\"   :"core/ajax/"
+		}
+	},
+	"config"     :{
+		"allow-plugins":{
+			"traineratwot/composer-config":true
+		}
+	},
+	"extra"      :{
+		"composer-config":{
+			"configPath": "core/config.php"
 		}
 	}
 }
