--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,8 @@
 		"gettext/translator"          :"^1.0",
 		"traineratwot/php-cli"        :"^1.1.5",
 		"traineratwot/pdo-extended"   :"^1.0",
-		"traineratwot/composer-config":"^1.0",
-		"traineratwot/cache"          :"^2.0"
+		"traineratwot/cache"          :"^2.0",
+		"traineratwot/composer-config":"^1.0.10"
 	},
 	"require-dev":{
 		"roave/security-advisories"    :"dev-latest",
