--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,9 @@
 	"license"    :"GPL-3.0-or-later",
 	"type"       :"project",
 	"scripts"    :{
-		"up:release"     :"gh release create \"4.0.1\" --generate-notes",
-		"composer-config-print": "composer getAllConfigs",
-		"composer-config-update": "composer configUpdate"
+		"up:release"            :"gh release create \"4.0.1\" --generate-notes",
+		"composer-config-print" :"composer getAllConfigs",
+		"composer-config-update":"composer configUpdate"
 	},
 	"require"    :{
 		"smarty/smarty"               :"~3.1",
@@ -55,7 +55,54 @@
 	},
 	"extra"      :{
 		"composer-config":{
-			"configPath": "core/config.php"
+			"configPath": "core/config.php",
+			"required": {
+				"WT_DOMAIN_URL": "main site url, like 'https://example.com'",
+				"WT_NODE_URL": "url to node_modules, like 'https://example.com/node_modules/'",
+				"WT_BASE_PATH": "base path",
+				"WT_CORE_PATH": "core path",
+				"WT_CACHE_PATH": "cache path",
+				"WT_MODEL_PATH": "model path",
+				"WT_VENDOR_PATH": "vendor path",
+				"WT_PAGES_PATH": "pages path",
+				"WT_VIEWS_PATH": "views path",
+				"WT_CLASSES_PATH": "classes path",
+				"WT_TEMPLATES_PATH": "template path",
+				"WT_AJAX_PATH": "ajax path",
+				"WT_CRON_PATH": "cron path",
+				"WT_ASSETS_PATH": "assets path",
+				"WT_IMAGES_PATH": "images path",
+				"WT_HOST_DB": "data base host, set null if use socket",
+				"WT_SOCKET_DB": "data base host, or  set null if use host",
+				"WT_PORT_DB": "database port, set null if use socket",
+				"WT_DATABASE_DB": "database name",
+				"WT_TYPE_DB": "driver name, see PDOE::DRIVER_*",
+				"WT_USER_DB": "username",
+				"WT_PASS_DB": "password",
+				"WT_CHARSET_DB": "charset, default utf8mb4",
+				"WT_SQL_LOG": "enable sql log?, log saved into cache",
+				"WT_PHP_EXEC_CMD": "command to exec php for cron, like '/bin/php7.4/php'",
+				"WT_SMARTY_TEMPLATE_PATH": "smarty templdate path, use 'WT_TEMPLATES_PATH'",
+				"WT_SMARTY_COMPILE_PATH": "smarty cache COMPILE path",
+				"WT_SMARTY_CONFIG_PATH": "smarty cache CONFIG path",
+				"WT_SMARTY_CACHE_PATH": "smarty cache path",
+				"WT_SMARTY_PLUGINS_PATH": "smarty plugin path",
+				"WT_FROM_EMAIL_MAIL": "sender email",
+				"WT_FROM_NAME_MAIL": "sender name",
+				"WT_SMTP_MAIL": "use SMTP? (bool)",
+				"WT_HOST_MAIL": "SMPT host",
+				"WT_AUTH_MAIL": "SMPT autch method, see 'phpmailer'",
+				"WT_USERNAME_MAIL": "SMPT user",
+				"WT_PASSWORD_MAIL": "SMPT pass",
+				"WT_SECURE_MAIL": "SMPT secure method, see 'phpmailer'",
+				"WT_PORT_MAIL": "SMTP port",
+				"WT_LOCALE_DOMAIN": "key string locale domain, see gettext",
+				"WT_LOCALE_PATH": "path to locale folder",
+				"WT_USE_GETTEXT": "use php extention gettext? (bool)"
+			},
+			"optional": {
+
+			}
 		}
 	}
 }
