--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
 		"composer-config"       :"composer getAllConfigs"
 	},
 	"require"    :{
+		"php": "^7.4 || ^8.0",
 		"smarty/smarty"               :"~3.1",
 		"phpmailer/phpmailer"         :"^6.5",
 		"bramus/router"               :"~1.6",
