--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
 	"scripts"    :{
 		"up:release"            :"gh release create \"4.0.1\" --generate-notes",
 		"composer-config-print" :"composer getAllConfigs",
-		"composer-config-update":"composer configUpdate",
-		"composer-config"       :"composer getAllConfigs"
+		"composer-config-update":"composer configUpdate"
 	},
 	"require"    :{
 		"php": "^7.4 || ^8.0",
