--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,13 @@
 	"type"       :"project",
 	"scripts"    :{
 		"up:release"            :"gh release create \"4.0.1\" --generate-notes",
+		"post-package-install"  :"core\\composer\\scripts::postInstall",
+		"package"               :"core\\composer\\scripts::package",
 		"composer-config-print" :"composer getAllConfigs",
 		"composer-config-update":"composer configUpdate"
 	},
 	"require"    :{
-		"php": "^7.4 || ^8.0",
+		"php"                         :"^7.4 || ^8.0",
 		"smarty/smarty"               :"~3.1",
 		"phpmailer/phpmailer"         :"^6.5",
 		"bramus/router"               :"~1.6",
@@ -29,7 +31,8 @@
 		"traineratwot/pdo-extended"   :"^1.0",
 		"traineratwot/cache"          :"^2.0",
 		"traineratwot/composer-config":"^1.1.0",
-		"tiben/crontab-manager": "^1.3"
+		"tiben/crontab-manager"       :"^1.3",
+		"nelexa/zip": "^4.0"
 	},
 	"require-dev":{
 		"roave/security-advisories"    :"dev-latest",
@@ -41,6 +44,7 @@
 			"core/model/main/Err.php"
 		],
 		"psr-4":{
+			"core\\"   :"core/",
 			"tables\\" :"core/classes/tables/",
 			"plugins\\":"core/classes/plugins/",
 			"traits\\" :"core/classes/traits/",
