--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,8 @@ package-lock.json
 # Commit your application's lock file https://getcomposer.org/doc/01-basic-usage.md#commit-your-composer-lock-file-to-version-control
 # You may choose to ignore a library lock file http://getcomposer.org/doc/02-libraries.md#lock-file
 # composer.lock
-/locale/*
+/locale/**/*.json
+/locale/**/*.php
 !/pnpm-lock.yaml
 pnpm-lock.yaml
 !/core/cron/**/*
