--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
 		"gettext/php-scanner"         :"^1.3",
 		"gettext/json"                :"^1.0",
 		"gettext/translator"          :"^1.0",
-		"traineratwot/php-cli"        :"^1.1.5",
+		"traineratwot/php-cli"        :"dev-main",
 		"traineratwot/pdo-extended"   :"^1.1",
 		"traineratwot/cache"          :"^2.0",
 		"traineratwot/composer-config":"^1.1.0",
@@ -60,7 +60,7 @@
 			"traineratwot/composer-config":true
 		}
 	},
-		"extra"      :{
+	"extra"      :{
 		"composer-config":{
 			"configPath": "core/config.php",
 			"required": {
