update smarty and router fix

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"$schema": "https://raw.githubusercontent.com/Traineratwot/composer-config/master/composer-config-schema.json",
+	"$schema"    :"https://raw.githubusercontent.com/Traineratwot/composer-config/master/composer-config-schema.json",
 	"name"       :"traineratwot/web-tool-template",
 	"version"    :"4.1.0",
 	"authors"    :[
@@ -12,15 +12,15 @@
 	"type"       :"project",
 	"scripts"    :{
 		"up:release"            :"gh release create \"4.1.0\" --generate-notes",
-		"wtInstall"  :"core\\composer\\Scripts::postInstall",
+		"wtInstall"             :"core\\composer\\Scripts::postInstall",
 		"package"               :"core\\composer\\Scripts::package",
-		"wtUpdate"          :"core\\composer\\Scripts::engineUpdate",
+		"wtUpdate"              :"core\\composer\\Scripts::engineUpdate",
 		"composer-config-print" :"composer getAllConfigs",
 		"composer-config-update":"composer configUpdate"
 	},
 	"require"    :{
 		"php"                         :"^7.4 || ^8.0",
-		"smarty/smarty"               :"~3.1",
+		"smarty/smarty"               :"~4.2.1",
 		"phpmailer/phpmailer"         :"^6.5",
 		"bramus/router"               :"~1.6",
 		"gettext/gettext"             :"^5.6",
@@ -45,14 +45,15 @@
 			"core/model/main/Err.php"
 		],
 		"psr-4":{
-			"core\\"   :"core/",
-			"tables\\" :"core/classes/tables/",
-			"plugins\\":"core/classes/plugins/",
-			"traits\\" :"core/classes/traits/",
-			"classes\\":"core/classes/",
-			"model\\"  :"core/model/",
-			"page\\"   :"core/views/",
-			"ajax\\"   :"core/ajax/"
+			"core\\"          :"core/",
+			"core\\components":"core/components/",
+			"tables\\"        :"core/classes/tables/",
+			"plugins\\"       :"core/classes/plugins/",
+			"traits\\"        :"core/classes/traits/",
+			"classes\\"       :"core/classes/",
+			"model\\"         :"core/model/",
+			"page\\"          :"core/views/",
+			"ajax\\"          :"core/ajax/"
 		}
 	},
 	"config"     :{
@@ -62,54 +63,54 @@
 	},
 	"extra"      :{
 		"composer-config":{
-			"configPath": "core/config.php",
-			"required": {
-				"DOMAIN_URL": "main site url, like 'https://example.com'",
-				"NODE_URL": "url to node_modules, like 'https://example.com/node_modules/'",
-				"BASE_PATH": "base path",
-				"CORE_PATH": "core path",
-				"CACHE_PATH": "cache path",
-				"MODEL_PATH": "model path",
-				"VENDOR_PATH": "vendor path",
-				"PAGES_PATH": "pages path",
-				"VIEWS_PATH": "views path",
-				"CLASSES_PATH": "classes path",
-				"TEMPLATES_PATH": "template path",
-				"AJAX_PATH": "ajax path",
-				"CRON_PATH": "cron path",
-				"ASSETS_PATH": "assets path",
-				"IMAGES_PATH": "images path",
-				"HOST_DB": "data base host, set null if use socket",
-				"SOCKET_DB": "data base host, or  set null if use host",
-				"PORT_DB": "database port, set null if use socket",
-				"DATABASE_DB": "database name",
-				"TYPE_DB": "driver name, see PDOE::DRIVER_*",
-				"USER_DB": "username",
-				"PASS_DB": "password",
-				"CHARSET_DB": "charset, default utf8mb4",
-				"SQL_LOG": "enable sql log?, log saved into cache",
-				"PHP_EXEC_CMD": "command to exec php for cron, like '/bin/php7.4/php'",
-				"SMARTY_TEMPLATE_PATH": "smarty templdate path, use 'TEMPLATES_PATH'",
-				"SMARTY_COMPILE_PATH": "smarty cache COMPILE path",
-				"SMARTY_CONFIG_PATH": "smarty cache CONFIG path",
-				"SMARTY_CACHE_PATH": "smarty cache path",
-				"SMARTY_PLUGINS_PATH": "smarty plugin path",
-				"FROM_EMAIL_MAIL": "sender email",
-				"FROM_NAME_MAIL": "sender name",
-				"SMTP_MAIL": "use SMTP? (bool)",
-				"HOST_MAIL": "SMPT host",
-				"AUTH_MAIL": "SMPT autch method, see 'phpmailer'",
-				"USERNAME_MAIL": "SMPT user",
-				"PASSWORD_MAIL": "SMPT pass",
-				"SECURE_MAIL": "SMPT secure method, see 'phpmailer'",
-				"PORT_MAIL": "SMTP port",
-				"LOCALE_DOMAIN": "key string locale domain, see gettext",
-				"LOCALE_PATH": "path to locale folder",
-				"USE_GETTEXT": "use php extention gettext? (bool)",
-				"TYPE_SYSTEM": "Operation system win or nix"
+			"configPath":"core/config.php",
+			"required"  :{
+				"DOMAIN_URL"          :"main site url, like 'https://example.com'",
+				"NODE_URL"            :"url to node_modules, like 'https://example.com/node_modules/'",
+				"BASE_PATH"           :"base path",
+				"CORE_PATH"           :"core path",
+				"CACHE_PATH"          :"cache path",
+				"MODEL_PATH"          :"model path",
+				"VENDOR_PATH"         :"vendor path",
+				"PAGES_PATH"          :"pages path",
+				"COMPONENTS_PATH"     :"components path",
+				"VIEWS_PATH"          :"views path",
+				"CLASSES_PATH"        :"classes path",
+				"TEMPLATES_PATH"      :"template path",
+				"AJAX_PATH"           :"ajax path",
+				"CRON_PATH"           :"cron path",
+				"ASSETS_PATH"         :"assets path",
+				"IMAGES_PATH"         :"images path",
+				"HOST_DB"             :"data base host, set null if use socket",
+				"SOCKET_DB"           :"data base host, or  set null if use host",
+				"PORT_DB"             :"database port, set null if use socket",
+				"DATABASE_DB"         :"database name",
+				"TYPE_DB"             :"driver name, see PDOE::DRIVER_*",
+				"USER_DB"             :"username",
+				"PASS_DB"             :"password",
+				"CHARSET_DB"          :"charset, default utf8mb4",
+				"SQL_LOG"             :"enable sql log?, log saved into cache",
+				"PHP_EXEC_CMD"        :"command to exec php for cron, like '/bin/php7.4/php'",
+				"SMARTY_TEMPLATE_PATH":"smarty templdate path, use 'TEMPLATES_PATH'",
+				"SMARTY_COMPILE_PATH" :"smarty cache COMPILE path",
+				"SMARTY_CONFIG_PATH"  :"smarty cache CONFIG path",
+				"SMARTY_CACHE_PATH"   :"smarty cache path",
+				"SMARTY_PLUGINS_PATH" :"smarty plugin path",
+				"FROM_EMAIL_MAIL"     :"sender email",
+				"FROM_NAME_MAIL"      :"sender name",
+				"SMTP_MAIL"           :"use SMTP? (bool)",
+				"HOST_MAIL"           :"SMPT host",
+				"AUTH_MAIL"           :"SMPT autch method, see 'phpmailer'",
+				"USERNAME_MAIL"       :"SMPT user",
+				"PASSWORD_MAIL"       :"SMPT pass",
+				"SECURE_MAIL"         :"SMPT secure method, see 'phpmailer'",
+				"PORT_MAIL"           :"SMTP port",
+				"LOCALE_DOMAIN"       :"key string locale domain, see gettext",
+				"LOCALE_PATH"         :"path to locale folder",
+				"USE_GETTEXT"         :"use php extention gettext? (bool)",
+				"TYPE_SYSTEM"         :"Operation system win or nix"
 			},
-			"optional": {
-
+			"optional"  :{
 			}
 		}
 	}
