--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
 		"composer-config-update":"composer configUpdate"
 	},
 	"require"    :{
-		"php"                         :"^7.4 || ^8.0",
+		"php"                         :"^8.1",
 		"smarty/smarty"               :"~4.2.1",
 		"phpmailer/phpmailer"         :"^6.5",
 		"bramus/router"               :"~1.6",
