--- a/composer.json
+++ b/composer.json
@@ -90,7 +90,8 @@
 				"PASS_DB": "password",
 				"CHARSET_DB": "charset, default utf8mb4",
 				"SQL_LOG": "enable sql log?, log saved into cache",
-				"PHP_EXEC_CMD": "command to exec php for cron, like '/bin/php7.4/php'",
+				"PHP_EXEC_CMD": "command to exec php for cron, like '/bin/php8.1/php'",
+				"COMPOSER_EXEC_PATH": "path to executable composer.pchar",
 				"SMARTY_TEMPLATE_PATH": "smarty templdate path, use 'TEMPLATES_PATH'",
 				"SMARTY_COMPILE_PATH": "smarty cache COMPILE path",
 				"SMARTY_CONFIG_PATH": "smarty cache CONFIG path",
