--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,12 @@
 	"type"       :"project",
 	"scripts"    :{
 		"up:release"            :"gh release create \"5.0.0\" --generate-notes",
-		"wtInstall"             :"core\\model\\composer\\Scripts::postInstall",
-		"package"               :"core\\model\\composer\\Scripts::package",
-		"wtUpdate"              :"core\\model\\composer\\Scripts::engineUpdate",
-		"wtTest"                :"core\\model\\composer\\Scripts::test",
-		"composer-config-print" :"composer getAllConfigs",
-		"composer-config-update":"composer configUpdate"
+		"wt:Install"             :"core\\model\\composer\\Scripts::postInstall",
+		"wt:package"               :"core\\model\\composer\\Scripts::package",
+		"wt:Update"              :"core\\model\\composer\\Scripts::engineUpdate",
+		"wt:Test"                :"core\\model\\composer\\Scripts::test",
+		"wt:composer-config-print" :"composer getAllConfigs",
+		"wt:composer-config-update":"composer configUpdate"
 	},
 	"require"    :{
 		"php"                         :"^8.1",
