--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"$schema": "https://raw.githubusercontent.com/Traineratwot/composer-config/master/composer-config-schema.json",
+	"$schema"    :"https://raw.githubusercontent.com/Traineratwot/composer-config/master/composer-config-schema.json",
 	"name"       :"traineratwot/web-tool-template",
 	"version"    :"5.0.0",
 	"authors"    :[
@@ -11,13 +11,15 @@
 	"license"    :"GPL-3.0-or-later",
 	"type"       :"project",
 	"scripts"    :{
-		"up:release"            :"gh release create \"5.0.0\" --generate-notes",
-		"wt:Install"             :"core\\model\\composer\\Scripts::postInstall",
+		"up:release"               :"gh release create \"5.0.0\" --generate-notes",
+		"wt:Install"               :"core\\model\\composer\\Scripts::postInstall",
 		"wt:package"               :"core\\model\\composer\\Scripts::package",
-		"wt:Update"              :"core\\model\\composer\\Scripts::engineUpdate",
-		"wt:Test"                :"core\\model\\composer\\Scripts::test",
+		"wt:Update"                :"core\\model\\composer\\Scripts::engineUpdate",
+		"wt:Test"                  :"core\\model\\composer\\Scripts::test",
 		"wt:composer-config-print" :"composer getAllConfigs",
-		"wt:composer-config-update":"composer configUpdate"
+		"wt:composer-config-update":"composer configUpdate",
+		"composer-config-print"    :"composer getAllConfigs",
+		"composer-config-update"   :"composer configUpdate"
 	},
 	"require"    :{
 		"php"                         :"^8.1",
@@ -35,7 +37,7 @@
 		"traineratwot/composer-config":"^1.1.0",
 		"tiben/crontab-manager"       :"^1.3",
 		"nelexa/zip"                  :"^4.0",
-		"telegram-bot/api": "^2.3"
+		"telegram-bot/api"            :"^2.3"
 	},
 	"require-dev":{
 		"roave/security-advisories"    :"dev-latest",
@@ -65,56 +67,55 @@
 	},
 	"extra"      :{
 		"composer-config":{
-			"configPath": "core/config.php",
-			"required": {
-				"DOMAIN_URL": "main site url, like 'https://example.com'",
-				"NODE_URL": "url to node_modules, like 'https://example.com/node_modules/'",
-				"BASE_PATH": "base path",
-				"CORE_PATH": "core path",
-				"CACHE_PATH": "cache path",
-				"MODEL_PATH": "model path",
-				"VENDOR_PATH": "vendor path",
-				"PAGES_PATH": "pages path",
-				"COMPONENTS_PATH": "components path",
-				"VIEWS_PATH": "views path",
-				"CLASSES_PATH": "classes path",
-				"TEMPLATES_PATH": "template path",
-				"AJAX_PATH": "ajax path",
-				"CRON_PATH": "cron path",
-				"ASSETS_PATH": "assets path",
-				"IMAGES_PATH": "images path",
-				"HOST_DB": "data base host, set null if use socket",
-				"SOCKET_DB": "data base host, or  set null if use host",
-				"PORT_DB": "database port, set null if use socket",
-				"DATABASE_DB": "database name",
-				"TYPE_DB": "driver name, see PDOE::DRIVER_*",
-				"USER_DB": "username",
-				"PASS_DB": "password",
-				"CHARSET_DB": "charset, default utf8mb4",
-				"SQL_LOG": "enable sql log?, log saved into cache",
-				"PHP_EXEC_CMD": "command to exec php for cron, like '/bin/php8.1/php'",
-				"COMPOSER_EXEC_PATH": "path to executable composer.pchar",
-				"SMARTY_TEMPLATE_PATH": "smarty templdate path, use 'TEMPLATES_PATH'",
-				"SMARTY_COMPILE_PATH": "smarty cache COMPILE path",
-				"SMARTY_CONFIG_PATH": "smarty cache CONFIG path",
-				"SMARTY_CACHE_PATH": "smarty cache path",
-				"SMARTY_PLUGINS_PATH": "smarty plugin path",
-				"FROM_EMAIL_MAIL": "sender email",
-				"FROM_NAME_MAIL": "sender name",
-				"SMTP_MAIL": "use SMTP? (bool)",
-				"HOST_MAIL": "SMPT host",
-				"AUTH_MAIL": "SMPT autch method, see 'phpmailer'",
-				"USERNAME_MAIL": "SMPT user",
-				"PASSWORD_MAIL": "SMPT pass",
-				"SECURE_MAIL": "SMPT secure method, see 'phpmailer'",
-				"PORT_MAIL": "SMTP port",
-				"LOCALE_DOMAIN": "key string locale domain, see gettext",
-				"LOCALE_PATH": "path to locale folder",
-				"USE_GETTEXT": "use php extention gettext? (bool)",
-				"TYPE_SYSTEM": "Operation system win or nix"
+			"configPath":"core/config.php",
+			"required"  :{
+				"DOMAIN_URL"          :"main site url, like 'https://example.com'",
+				"NODE_URL"            :"url to node_modules, like 'https://example.com/node_modules/'",
+				"BASE_PATH"           :"base path",
+				"CORE_PATH"           :"core path",
+				"CACHE_PATH"          :"cache path",
+				"MODEL_PATH"          :"model path",
+				"VENDOR_PATH"         :"vendor path",
+				"PAGES_PATH"          :"pages path",
+				"COMPONENTS_PATH"     :"components path",
+				"VIEWS_PATH"          :"views path",
+				"CLASSES_PATH"        :"classes path",
+				"TEMPLATES_PATH"      :"template path",
+				"AJAX_PATH"           :"ajax path",
+				"CRON_PATH"           :"cron path",
+				"ASSETS_PATH"         :"assets path",
+				"IMAGES_PATH"         :"images path",
+				"HOST_DB"             :"data base host, set null if use socket",
+				"SOCKET_DB"           :"data base host, or  set null if use host",
+				"PORT_DB"             :"database port, set null if use socket",
+				"DATABASE_DB"         :"database name",
+				"TYPE_DB"             :"driver name, see PDOE::DRIVER_*",
+				"USER_DB"             :"username",
+				"PASS_DB"             :"password",
+				"CHARSET_DB"          :"charset, default utf8mb4",
+				"SQL_LOG"             :"enable sql log?, log saved into cache",
+				"PHP_EXEC_CMD"        :"command to exec php for cron, like '/bin/php8.1/php'",
+				"COMPOSER_EXEC_PATH"  :"path to executable composer.pchar",
+				"SMARTY_TEMPLATE_PATH":"smarty templdate path, use 'TEMPLATES_PATH'",
+				"SMARTY_COMPILE_PATH" :"smarty cache COMPILE path",
+				"SMARTY_CONFIG_PATH"  :"smarty cache CONFIG path",
+				"SMARTY_CACHE_PATH"   :"smarty cache path",
+				"SMARTY_PLUGINS_PATH" :"smarty plugin path",
+				"FROM_EMAIL_MAIL"     :"sender email",
+				"FROM_NAME_MAIL"      :"sender name",
+				"SMTP_MAIL"           :"use SMTP? (bool)",
+				"HOST_MAIL"           :"SMPT host",
+				"AUTH_MAIL"           :"SMPT autch method, see 'phpmailer'",
+				"USERNAME_MAIL"       :"SMPT user",
+				"PASSWORD_MAIL"       :"SMPT pass",
+				"SECURE_MAIL"         :"SMPT secure method, see 'phpmailer'",
+				"PORT_MAIL"           :"SMTP port",
+				"LOCALE_DOMAIN"       :"key string locale domain, see gettext",
+				"LOCALE_PATH"         :"path to locale folder",
+				"USE_GETTEXT"         :"use php extention gettext? (bool)",
+				"TYPE_SYSTEM"         :"Operation system win or nix"
 			},
-			"optional": {
-
+			"optional"  :{
 			}
 		}
 	}
