--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
-	"dependencies"   :{
-		"@types/jquery":"^3.5.5",
-		"bootstrap"    :"^5.0.2",
-		"font-awesome" :"^4.7.0",
-		"jquery"       :"^3.6.0",
-		"pnotify"      :"^5.2.0"
+	"dependencies": {
+		"@types/jquery": "^3.5.5",
+		"bootstrap": "^5.0.2",
+		"chokidar": "^3.5.3",
+		"font-awesome": "^4.7.0",
+		"jquery": "^3.6.0",
+		"pnotify": "^5.2.0",
+		"ws": "^8.9.0"
 	},
-	"devDependencies":{
-		"typescript":"^4.3.5"
+	"devDependencies": {
+		"@types/chokidar": "^2.1.3",
+		"@types/ws": "^8.5.3",
+		"typescript": "^4.3.5"
 	}
 }
